# TclPKCS11

./: .gitignore  CMakeLists.txt  README  README.md  build_to_android.sh  configure_cmake_unix_and_build.sh  configure_make_unix.sh  configure_nmake.cmd  configure_vs2008.cmd  usage_tclpkcs11.txt
distr/Linux32/: pkgIndex.tcl
distr/MacOS/: pkgIndex.tcl  tclpkcs11.dylib
distr/Win64/: pkgIndex.tcl
src/: CMakeLists.txt  tclpkcs11.c
src/tclpkcs11/: CMakeLists.txt  LICENSE  README_ORIG  pkcs11_wrapper.def  pkgIndex.tcl.in  tclpkcs11.c  usage_tclpkcs11_ORIG.txt
src/tclpkcs11/tclpkcs11-windows/x86/lib/tcl/: tclstub86.lib
src/tclpkcs11/tclpkcs11-windows/x86_64/lib/tcl/: tclstub86.lib
src/tests/: test_import.tcl  test_keypair_sign_verify.tcl  test_verify.tcl
tests/: test_changeuserpin.tcl  test_digest.tcl  test_import.tcl  test_inittoken.tcl  test_keypair.tcl  test_keypair_sign_verify.tcl  test_list_mech.tcl  test_listcertsder.tcl  test_listobject.tcl  test_slots_with_token.tcl  test_verify.tcl
